Bug 142291 - FILESAVE PPTX Table border styles lost upon save
Summary: FILESAVE PPTX Table border styles lost upon save
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Tibor Nagy
URL:
Whiteboard: target:7.5.0
Keywords: filter:pptx
Depends on:
Blocks: PPTX-Tables
  Show dependency treegraph
 
Reported: 2021-05-14 18:24 UTC by NISZ LibreOffice Team
Modified: 2025-01-20 11:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from PowerPoint (42.22 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-05-14 18:24 UTC, NISZ LibreOffice Team
Details
The original file saved by Impress (34.72 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-05-14 18:24 UTC, NISZ LibreOffice Team
Details
Screenshot of the original and exported document side by side in Impress (120.11 KB, image/png)
2021-05-14 18:25 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-05-14 18:24:14 UTC
Created attachment 172006 [details]
Example file from PowerPoint

Attached example document was made in PP and demonstrates all table border styles PP offers.
These are correctly imported to Impress, but upon save to PPTX all of them is converted to the default continuous line.

Steps to reproduce:
    1. Open attached file
    2. Save as PPTX, reopen

Actual results:
Table border styles are lost.

Expected results:
Table border styles are retained.

LibreOffice details:
Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 6c8ca02c5935a800cff70f3c173319b454b63c41
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-05-14 18:24:34 UTC
Created attachment 172007 [details]
The original file saved by Impress
Comment 2 NISZ LibreOffice Team 2021-05-14 18:25:10 UTC
Created attachment 172008 [details]
Screenshot of the original and exported document side by side in Impress
Comment 3 Timur 2021-05-27 10:59:41 UTC
True. Wrong in LO and MSO. 
Let's note here that saving to PPT is similarly wrong, until it has it's bug.
Comment 4 Commit Notification 2022-11-14 11:15:25 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1b167f3e0b1afec7c257f458db7505d8d8f177b3

tdf#142291 PPTX export: fix table border styles

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2022-11-28 13:40:11 UTC
Verified in:
Version: 7.5.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 5b18eebc2c95321ce7e6edf10f4df81557382a48
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded