tdf#142291 PPTX export: fix table border styles

Export border style subset used by the PPTX
import, ::table::BorderLineStyle::SOLID, DOTTED,
DASHED, DASH_DOT and DASH_DOT_DOT.

See also tablecell.cxx:applyLineAttributes().

Change-Id: I5e4d631f7ca410beb76155579ea5b21a6eb66350
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142240
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>